--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ranger-website",
   "version": "1.0.0",
   "description": "Girlguiding resource for 1st Armley Rangers",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "npm test"
   },
