--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "npm test"
   },
   "author": "Clare Devine",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  }
 }
